Responsive bugs. Icons p widht overflows x axes

--- a/app/scss/custom/views/_machine-learning.scss
+++ b/app/scss/custom/views/_machine-learning.scss
@@ -256,7 +256,7 @@
           font-size: 15px;
           font-weight: 300;
           letter-spacing: .05em;
-          width: 300px;
+          max-width: 300px;
         }
       }
     }
